tests/pos/i7650/Test_1.scala
@main def Test() = println("hi")