tests/neg/i22890/Test_2.scala
@main def Test =
  println("hello")
// nopos-warn
